<resources>
    <string name="app_name">ExampleTest</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="view_pager">ViewPager</string>
    <string name="views">Views</string>
    <string name="internet_connections">InternetConections</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="database">DataBase</string>
    <string name="simple_database">Simple DataBase</string>
    <string name="green_dao">Green Dao</string>
    <string name="realm">Realm</string>
    <string name="sugar_orm">Sugar ORM</string>
    <string name="room">Room</string>
    <string name="external_data_base">External Data Base</string>
    <string name="add_school">Add School</string>
    <string name="show_schools">Show Schools</string>
    <string name="add_manager">Add Manager</string>
    <string name="show_managers">Show Managers</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="show_teachers">Show Teachers</string>
    <string name="add_student">Add Student</string>
    <string name="show_students">Show Students</string>
    <string name="enter_school_manager">Enter School Manager</string>
    <string name="enter_school_name">Enter School Name</string>
    <string name="enter_school_id">Enter School Id</string>
    <string name="enter_student_first_name">Enter Student First Name</string>
    <string name="enter_student_family_name">Enter Student Family Name</string>
    <string name="save">Save</string>
    <string name="enter_student_number">Enter Student number</string>
    <string name="enter_manager_id">Enter Manager ID</string>
    <string name="add_manager_name">Add Manager Name</string>
    <string name="enter_manager_first_name">Enter Manager First Name</string>
    <string name="enter_manager_lastName">Enter Manager LastName</string>
    <string name="id">Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_teacher_name">Enter Teacher Name</string>
    <string name="enter_teacher_family_name">Enter Teacher Family Name</string>
    <string name="enter_teacher_firstname">Enter Teacher FirstName</string>
    <string name="search">Search</string>
    <string name="intent">Intent</string>
    <string name="send">Send</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_detail">Enter Detail</string>
    <string name="enter_name">Enter Name</string>
    <string name="open_google">Open Google</string>
    <string name="dial">Dial</string>
    <string name="call">Call</string>
    <string name="get_picture_fom_gallery">Get Picture Fom Gallery</string>
    <string name="send_image">Send Image</string>
    <string name="send_text">Send Text</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="send_email">Send Email</string>
    <string name="get_contact">Get Contact</string>
    <string name="retrofit">Retrofit</string>
    <string name="connection">Connection</string>
    <string name="weather">Weather</string>
    <string name="string_url_day_list">http://cdn.parsijoo.ir/static/home/source/cdn/images/services/weather/%s.png</string>
    <string name="condition">شرایط هوا</string>
    <string name="retrofit2">Retrofit2</string>
    <string name="get_day_pic">http://cdn.parsijoo.ir/static/home/source/cdn/images/services/weather/%s.png</string>
    <string name="todo">TODO</string>
    <string name="now_temp">دمای فعلی</string>
    <string name="button">Button</string>
    <string name="mvp_example">MVP_Example</string>
    <string name="mvp_ex">MVP Ex</string>
    <string name="big_adapter">Big Adapter</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="day_item_format">max:%d min:%d</string>
    <string name="swap">Swap</string>
    <string name="testcustomview">TestCustomView</string>
</resources>
