<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.ViewActivity">
    <LinearLayout
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">


        <Button
            android:id="@+id/btn_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_view" />

        <Button
            android:id="@+id/btn_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_pager" />
        <Button
            android:id="@+id/btn_custom_view_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testcustomview" />
    </LinearLayout>
</LinearLayout>