<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".data_base.simple_sqlite_data_base.SimpleDataBaseAddStudentFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_school_name_fragment_simple_data_base_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_school_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_school_id_fragment_simple_data_base_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_school_id"
            android:inputType="number"
            android:maxLength="10"
            android:numeric="signed|integer" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_student_first_name_fragment_simple_data_base_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_first_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_student_family_name_fragment_simple_data_base_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_family_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_student_number_fragment_simple_data_base_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_number"
            android:inputType="number"
            android:maxLength="10"
            android:numeric="signed|integer" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_save_student_fragment_simple_data_base_add_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/save"/>


</LinearLayout>