<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".data_base.greendao_data_base.GDAddTeacherFragment">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_school_name_fragment_layout_add_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_school_name"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_school_id_fragment_layout_add_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_school_id"
            android:inputType="number"
            android:maxLength="10"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_teacher_first_name_fragment_layout_add_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_teacher_firstname"
            android:inputType="text"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_txt_enter_teacher_family_name_fragment_layout_add_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_teacher_family_name"
            android:inputType="text"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btn_save_teacher_fragment_layout_add_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/save"/>



</LinearLayout>