<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/id" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/first_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/last_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_id_person_item_in_list_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_first_name_person_item_in_list_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_last_name_person_item_in_list_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>