<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="vertical">

        <CheckedTextView
            android:id="@+id/checkedTextView_max_big_adapter_day_item"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:checkMark="@drawable/ic_arrow_drop_up_green_500_48dp"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="19sp"
            android:text="@string/up"
            android:textStyle="bold|italic" />

        <CheckedTextView
            android:id="@+id/checkedTextView_min_big_adapter_day_item"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:checkMark="@drawable/ic_arrow_drop_down_red_500_48dp"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="19sp"
            android:text="@string/down"
            android:textStyle="bold|italic" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_dayName_big_adapter_day_item"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_margin="15dp"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/condition_big_adapter_day_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter" />
    </LinearLayout>
</LinearLayout>